tests/test76.rael.exp
Error [2:15]: Index too big
| log :array at 56
|               ^
